--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "render-build": "./render-build.sh",
     "start": "node index.js"
   },
   "keywords": [],
